package Modelo.Observer;

public interface Observador {
    void actualizar();
}
