package Vista;

public class VistaGUI {
}
