@startuml

' ======== INTERFACES OBSERVER ========
interface Modelo.Observer.Observable {
    ~ void agregarObservador(Observador)
    ~ void sacarObservador(Observador)
    ~ void notificar()
}

interface Modelo.Observer.Observador {
    ~ void actualizar()
}

' ======== CONTROLADOR ========
class Controlador.ControladorConsola {
    - App modelo
    - VistaConsola vista
    + void iniciarRonda()
    + App getModelo()
    + void setModelo(App)
    + VistaConsola getVista()
    + void setVista(VistaConsola)
    + void actualizar()
}

class Controlador.ControladorPartida {
    - VistaConsola vista
    + void iniciar()
    - void crearPartida()
}

' ======== MODELO ========
class Modelo.Ficha {
    - Integer lado1
    - Integer lado2
    - boolean doble
    - Integer valorTotal
    + Integer getLado1()
    + Integer getLado2()
    + boolean isDoble()
    + Integer getValorTotal()
    + void setValorTotal(Integer)
    + void rotarFicha()
    + String toString()
}

class Modelo.Jugador {
    - String nombre
    - ArrayList<Ficha> mano
    - Integer puntosPartida
    + String getNombre()
    + void setNombre(String)
    + ArrayList<Ficha> getMano()
    + void setMano(ArrayList<Ficha>)
    + Integer getPuntosPartida()
    + void setPuntosPartida(Integer)
    + Ficha seleccionarFicha(int)
    + boolean colocarFicha(Ronda,int)
    + void robarFicha(Ficha)
    + String toString()
}

class Modelo.Pozo {
    - LinkedList<Ficha> pozo
    + LinkedList<Ficha> getPozo()
    + void setPozo(LinkedList<Ficha>)
    + Ficha devolverPrimera()
}

class Modelo.Ronda {
    - Pozo pozo
    - LinkedList<Jugador> jugadores
    - LinkedList<Ficha> fichasJugadas
    - int indiceJugadorActual
    - int jugadoresQuePasaron
    + Pozo getPozo()
    + void setPozo(Pozo)
    + LinkedList<Jugador> getJugadores()
    + void setJugadores(LinkedList<Jugador>)
    + LinkedList<Ficha> getFichasJugadas()
    + void setFichasJugadas(LinkedList<Ficha>)
    + void verificarFinRonda()
    + void generarFichas()
    + void repartirFichas()
    + void robarFicha()
    + Jugador getJugadorActual()
    + void pasarAlSiguienteJugador()
    + boolean puedeJugar(Jugador)
    + boolean jugarTurno(int,App)
    + boolean rondaBloqueada()
    + boolean rondaFinalizada()
}

class Modelo.Partida {
    - Jugador ganador
    - Integer ptosGanar
    - LinkedList<Jugador> jugadores
    + Jugador getGanador()
    + void setGanador(Jugador)
    + Integer getPtosGanar()
    + LinkedList<Jugador> getJugadores()
    + void setJugadores(LinkedList<Jugador>)
    + void verificarGanador()
}

class Modelo.App {
    - Partida partida
    - Ronda ronda
    - ArrayList<Observador> observadores
    + Partida getPartida()
    + Ronda getRonda()
    + void agregarObservador(Observador)
    + void sacarObservador(Observador)
    + void notificar()
}

' ======== VISTAS ========
class Vista.VistaConsola {
    - Scanner sc
    + void mostrarMenuRonda()
    + void mostrarMenuInicial()
    + String pedirNombreJugador(int)
    + int pedirPuntosParaGanar()
    + int obtenerOpcion()
    + void mostrarMesa(Ronda)
    + void mostrarMano(Jugador)
    + void mostrarJugador(Ronda)
    + int pedirIndiceFicha()
    + void mostrarMensaje(String)
}

class Vista.VistaGUI {
}

class Main {
    + {static} void main(String[])
}

' ======== RELACIONES (FLECHAS) ========

' Implementación del patrón Observer
Modelo.Observer.Observador <|.. Controlador.ControladorConsola
Modelo.Observer.Observable <|.. Modelo.App

' Relaciones del modelo
Modelo.Partida --> Modelo.Jugador : jugadores *
Modelo.Ronda --> Modelo.Pozo
Modelo.Ronda --> Modelo.Jugador : jugadores *
Modelo.Ronda --> Modelo.Ficha : fichasJugadas *
Modelo.Jugador --> Modelo.Ficha : mano *
Modelo.App --> Modelo.Partida
Modelo.App --> Modelo.Ronda

' Relaciones controlador - vista/modelo
Controlador.ControladorConsola --> Modelo.App
Controlador.ControladorConsola --> Vista.VistaConsola

Controlador.ControladorPartida --> Vista.VistaConsola

' Vista usa datos del modelo
Vista.VistaConsola --> Modelo.Jugador
Vista.VistaConsola --> Modelo.Ronda

@enduml
